# rtcom

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/rtcom-cli/: Cargo.toml  build.rs
crates/rtcom-cli/src/: args.rs  main.rs  signal.rs  stdin.rs  terminal.rs  tty.rs
crates/rtcom-cli/tests/: e2e_basic.rs  e2e_cli.rs  e2e_pty.rs
crates/rtcom-cli/tests/common/: mod.rs
crates/rtcom-config/: Cargo.toml
crates/rtcom-config/src/: lib.rs  paths.rs  profile.rs
crates/rtcom-config/tests/: io.rs
crates/rtcom-core/: Cargo.toml
crates/rtcom-core/src/: command.rs  config.rs  device.rs  error.rs  event.rs  lib.rs  lock.rs  mapper.rs  session.rs
crates/rtcom-core/tests/: pty_roundtrip.rs  session_loopback.rs
crates/rtcom-tui/: Cargo.toml
crates/rtcom-tui/src/: app.rs  input.rs  layout.rs  lib.rs  modal.rs  profile_bridge.rs  run.rs  serial_pane.rs  terminal.rs  toast.rs
crates/rtcom-tui/src/menu/: confirm.rs  line_endings.rs  mod.rs  modem_control.rs  placeholder.rs  root.rs  screen_options.rs  serial_port.rs
crates/rtcom-tui/src/snapshots/: rtcom_tui__app__tests__main_screen_120x40_empty_snapshot.snap  rtcom_tui__app__tests__main_screen_120x40_menu_open_overlay_snapshot.snap  rtcom_tui__app__tests__main_screen_80x24_empty_snapshot.snap  rtcom_tui__app__tests__main_screen_80x24_menu_open_dimmed_overlay_snapshot.snap  rtcom_tui__app__tests__main_screen_80x24_menu_open_fullscreen_snapshot.snap  rtcom_tui__app__tests__main_screen_80x24_menu_open_snapshot.snap  rtcom_tui__app__tests__main_screen_80x24_serial_port_setup_open_snapshot.snap  rtcom_tui__app__tests__main_screen_80x24_with_serial_data_snapshot.snap  rtcom_tui__app__tests__main_screen_80x24_with_toast_snapshot.snap
docs/: tui.md
docs/adr/: 008-ratatui-tui.md  009-vt100-emulator.md  010-directories-xdg.md
docs/plans/: 2026-04-18-tui-menu-design.md  2026-04-18-v02-tui-menu-implementation.md
man/: rtcom.1
