[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/TrekMax/rtcom"
authors = ["TrekMax"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serialport = "4"
tokio-serial = "5.4"
tokio-util = { version = "0.7", features = ["rt"] }
nix = { version = "0.29", default-features = false, features = ["signal"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.30"
vt100 = "0.16"
tui-term = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
thiserror = "1"
directories = "5"
insta = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
futures = "0.3"
rtcom-core = { path = "crates/rtcom-core", version = "0.2.0" }
rtcom-config = { path = "crates/rtcom-config", version = "0.2.0" }
rtcom-tui = { path = "crates/rtcom-tui", version = "0.2.0" }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
