[package]
name = "rtcom-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line interface for rtcom (Rust Terminal Communication)."
readme = "../../README.md"

[[bin]]
name = "rtcom"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
rtcom-core = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
ctrlc = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
