[package]
name = "rtcom-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line interface for rtcom (Rust Terminal Communication): a modern picocom/tio alternative."
readme = "../../README.md"
keywords = ["serial", "terminal", "uart", "picocom", "tio"]
categories = ["command-line-utilities", "embedded", "hardware-support"]

[[bin]]
name = "rtcom"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
rtcom-core = { workspace = true }
rtcom-config = { workspace = true }
rtcom-tui = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
rtcom-config = { workspace = true }
