[package]
name = "rtcom-config"
description = "Profile persistence for rtcom"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
directories = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
